--- a/src/components/edit-button.module.scss
+++ b/src/components/edit-button.module.scss
@@ -1,5 +1,19 @@
 .editButton {
     color: #777;
+
+    &.editButtonActive {
+        color: #26323b;
+        background-color: rgba(38, 50, 59, 0.08);
+
+        &:hover {
+            background-color: rgba(38, 50, 59, 0.12);
+        }
+
+        &:focus-visible {
+            outline: 2px solid #26323b;
+            outline-offset: 2px;
+        }
+    }
 }
 
 .editIcon {
