--- a/src/stammdaten/ferien/ferien-closures-editor.module.scss
+++ b/src/stammdaten/ferien/ferien-closures-editor.module.scss
@@ -36,13 +36,13 @@ $nestedRowRailColor: color.change($sportamtGreen, $alpha: 0.5);
 
     :global {
         .MuiInputBase-root {
-            background-color: #f3f3f3;
+            background-color: $inputBackgroundColor;
             border-radius: 5px;
         }
 
         .MuiPickersOutlinedInput-root,
         .MuiOutlinedInput-root {
-            background-color: #f3f3f3 !important;
+            background-color: $inputBackgroundColor !important;
             border-radius: 5px !important;
         }
 
